--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
 
     <header>
-        <h1>Welcome to My Minecraft Fan Site</h1>
+        <h1>Welcome to X-Rebel Gamerz Site</h1>
     </header>
 
     <nav>
