--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 
     <section id="contact">
         <h2>📧 Contact</h2>
-        <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        <p>Email: <a href="mailto:rebelsmp.fun">rebelsmp.fun</a></p>
     </section>
 
     <footer>
-        <p>Made by a Minecraft Fan &copy; 2025</p>
+        <p>Made by LORDxTHANONS &copy; 2025</p>
     </footer>
 
 </body>
